unpackaged/main/default/objects/Customer_Special_Buy__c/Customer_Special_Buy__c.object-meta.xml
<CustomObject>
    <description>This junction object captures the relationship between a Product with a non-standard Cost Price, and the specific Account(s) where the special Cost Price is applicable</description>
    <label>Customer Special Buy</label>
    <nameField>
        <displayFormat>CSB-{0000000}</displayFormat>
        <label>Customer Special Buy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Special Buys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>