unpackaged/main/default/objects/Customer_Special_Buy__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>The Customer linked to the Special Buy</description>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Special Buys</relationshipLabel>
    <relationshipName>Customer_Special_Buys</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>