unpackaged/main/default/objects/Customer_Special_Buy__c/fields/Customer_Project__c.field-meta.xml
<CustomField>
    <fullName>Customer_Project__c</fullName>
    <description>Project associated to the customer specific special buy.</description>
    <label>Project</label>
    <length>50</length>
    <type>Text</type>
</CustomField>