unpackaged/main/default/objects/Customer_Special_Buy__c/fields/Customer_Special_Buy_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_Special_Buy_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>The Customer Special Buy external ID</description>
    <externalId>true</externalId>
    <label>Customer Special Buy ID</label>
    <length>12</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>