unpackaged/main/default/objects/Customer_Special_Buy__c/fields/Special_Buy__c.field-meta.xml
<CustomField>
    <fullName>Special_Buy__c</fullName>
    <description>The Special Buy</description>
    <label>Special Buy</label>
    <referenceTo>Special_Buy__c</referenceTo>
    <relationshipLabel>Customer Special Buys</relationshipLabel>
    <relationshipName>Customer_Special_Buys</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>